--- a/views/index.html
+++ b/views/index.html
@@ -8,7 +8,7 @@
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
     <meta http-equiv="x-ua-compatible" content="ie=edge" />
-    {{ if .Image }}
+    {{ if .Embed}} {{ if .Image }}
     <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:image" content="{{.FileURL}}" />
     <meta property="og:description" content="{{.Desc}}" />
@@ -18,6 +18,7 @@
     {{ end }}
     <meta name="theme-color" content="{{.Color}}" />
     <link type="application/json+oembed" href="{{.OEmbedURL}}" />
+    {{ end }}
     <style>
       @import url("https://fonts.googleapis.com/css?family=Roboto&display=swap");
       body {
@@ -43,15 +44,18 @@
         color: white;
         text-decoration: none;
       }
+      .info {
+        color: gray;
+      }
     </style>
   </head>
   <body>
     <div class="nav">
-      <a href="https://imgs.bar" class="name">Back to imgs.bar</a>
+      <a href="https://beta.imgs.bar" class="name">Return to beta</a>
     </div>
     <center>
       <div class="vertical-center">
-        <h3>{{ .Name }} (<span class="info">{{ .OGName }}</span>)</h3>
+        <h3 style="font-size: 2em">{{ .OGName }}</h3>
         {{ if .Image }}
         <img
           style="
@@ -90,6 +94,7 @@
           Download
         </button>
         {{ end }}
+        <h4>{{ .Name }} (<span class="info">{{ .Size }}</span>)</h4>
       </div>
     </center>
   </body>
