--- a/views/index.html
+++ b/views/index.html
@@ -43,7 +43,6 @@
       .fileDesc {
         color: #fff;
         font-size: 1.4rem;
-        margin-top: -20px;
         margin-bottom: 5px;
       }
 
@@ -67,6 +66,7 @@
         width: auto;
         height: auto;
         border-radius: 12.5px;
+        margin-bottom: 50px;
       }
     </style>
   </head>
