--- a/views/index.html
+++ b/views/index.html
@@ -156,7 +156,7 @@
 
           <div id="text">
             <h2 class="fileDesc">
-              🐈🐈 {{ .Name }} (<span class="fileSize">{{ .Size }}</span>)
+              {{ .Name }} (<span class="fileSize">{{ .Size }}</span>)
             </h2>
             <h3 class="fileAuthor">
               Uploaded by: <span class="fileAuthor">{{ .Uploader }}</span>
